--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
-    "prettier": "^3.3.3",
     "query-string": "^9.1.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
@@ -41,6 +40,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
